<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_addHillfort"
        android:iconTint="@color/colorBlack"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_settings"
        android:iconTint="@color/colorBlack"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_logout"
        android:icon="@drawable/logout"
        android:title="@string/menu_logout"
        android:iconTint="@color/colorBlack"
        app:showAsAction="always" />
</menu>