<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.hillforts.views.hillfort.HillfortView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-16dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/appBarLayout"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/pickDate"
                android:layout_width="379dp"
                android:layout_height="40dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="19dp"
                android:background="@drawable/rounded_border"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/button_pickDate"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <Button
                android:id="@+id/chooseImage"
                android:layout_width="379dp"
                android:layout_height="40dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="19dp"
                android:background="@drawable/rounded_border"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/button_addImage"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editDateVisited" />

            <Button
                android:id="@+id/hillfortLocation"
                android:layout_width="379dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_location"
                android:background="@drawable/rounded_border"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hillfortImage" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="379dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:stateListAnimator="@null"
                android:text="@string/button_addHillfort"
                android:background="@drawable/rounded_border"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationEdit"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/description"
                android:layout_width="394dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="9dp"
                android:hint="@string/hint_hillfortDescription"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hillfortTitle" />

            <EditText
                android:id="@+id/hillfortTitle"
                android:layout_width="392dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="72dp"
                android:autofillHints=""
                android:hint="@string/hint_hillfortTitle"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/editDateVisited"
                android:layout_width="379dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="5dp"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pickDate"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/locationEdit"
                android:layout_width="379dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="5dp"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hillfortLocation"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/hillfortImage"
                android:layout_width="393dp"
                android:layout_height="150dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chooseImage"
                app:srcCompat="@mipmap/ic_launcher" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>